fix(ui):  BottomPanel's flex alignment

--- a/client/src/components/bottomPanel/BottomPanel.module.css
+++ b/client/src/components/bottomPanel/BottomPanel.module.css
@@ -4,6 +4,6 @@
   height: 25vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 0.3rem;
 }
